--- a/src/app/components/add-tutorial/add-tutorial.component.html
+++ b/src/app/components/add-tutorial/add-tutorial.component.html
@@ -19,7 +19,7 @@
           class="form-control"
           id="description"
           required
-          [(ngModel)]="tutorial.description"
+          [(ngModel)]="tutorial.body"
           name="description"
         />
       </div>
