--- a/src/app/components/tutorial-details/tutorial-details.component.html
+++ b/src/app/components/tutorial-details/tutorial-details.component.html
@@ -18,7 +18,7 @@
           type="text"
           class="form-control"
           id="description"
-          [(ngModel)]="currentTutorial.description"
+          [(ngModel)]="currentTutorial.body"
           name="description"
         />
       </div>
