--- a/src/app/components/tutorial-list/tutorial-list.component.html
+++ b/src/app/components/tutorial-list/tutorial-list.component.html
@@ -43,7 +43,7 @@
       </div>
       <div>
         <label><strong>Description:</strong></label>
-        {{ currentTutorial.description }}
+        {{ currentTutorial.body }}
       </div>
       <div>
         <label><strong>Status:</strong></label>
